# price_books

./: .dockerignore  .drone.yml  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  docker-compose_dev.yml  pyproject.toml
ansible/: ansible.cfg  django.yml
ansible/tasks/: keys.yml  user.yml
ansible/templates/: dc.sh.j2  enc.j2  nginx.conf.j2  start.sh.j2  stop.sh.j2  systemd.service.j2
books/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
books/loaders/: ak_loader.py  l2_loader.py  pt_loader.py  um_loader.py
books/migrations/: 0003_auto_20200504_1517.py  0004_auto_20200504_2137.py  0006_orderitem_count.py  0009_orderitem_publisher.py  0010_auto_20200507_1956.py
books/templates/books/: csv.html  index.html  load_file.html
conf/: db.cnf  nginx.conf  nginx_dev.conf  uwsgi.ini
core/: settings.py  urls.py  wsgi.py
project/books/: admin.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
project/books/loaders/: ak_loader.py  am_loader.py  ar_loader.py  bg_order_loader.py  cb_order_loader.py  df_order_loader.py  em_loader.py  is_loader.py  kk_loader.py  kt_loader.py  kt_order_loader.py  l2_loader.py  nf_order_loader.py  om_order_loader.py  oo_order_loader.py  pt_loader.py  sg_order_loader.py  um_loader.py  zc_loader.py
project/books/migrations/: 0001_initial.py  0002_auto_20200504_1032.py  0005_orderitem_status.py  0007_auto_20200505_1446.py  0008_supplier_loader_type.py  (+6 more)
project/core/: asgi.py  celery.py  settings.py  urls.py
project/templates/: base.html
(+5 files in other folders)
