[tool.poetry]
name = "price_books"
version = "0.1.0"
description = ""
authors = ["ast <ast@atyx.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"
openpyxl = "^3.0.3"
mysqlclient = "^1.4.6"
xlrd = "^1.2.0"
xlwt = "^1.3.0"
django-server-timing = "^0.0.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pylint = "^2.5.0"
pylint-django = "^2.0.15"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
